test/libsolidity/syntaxTests/parsing/wrong_compiler_3.sol
pragma solidity ^99.99.0;
contract C {
    uint ;
}
// ----
// ParserError 5333: (0-25='pragma solidity ^99.99.0;'): Source file requires different compiler version (current compiler is ....
